[project]
name = "forum-etl"
version = "0.1.0"
description = "Forum topic export → structured JSON / embeddings (Qdrant RAG pipeline)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.9.0",
]

[project.scripts]
forum-etl = "forum_etl.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forum_etl"]
